# hexa-swapi-python

./: pyproject.toml
Presentation/: Transcription.md
domain/: hello.py  pyproject.toml
domain/src/rebel_rescue/fleet/: fleet.py  fleet_assembler.py  starship.py
domain/src/rebel_rescue/fleet/api/: assemble_a_fleet.py
domain/src/rebel_rescue/fleet/spi/: starship_inventory.py
domain/src/rebel_rescue/fleet/spi/stubs/: starship_inventory_stub.py
domain/tests/: test_assemble_a_fleet.py
http_request/: StarshipRequest.http
infrastructure/: pyproject.toml
infrastructure/src/hexa_swapi_infra/controllers/: api.py  rescue_fleet_controller.py
infrastructure/src/hexa_swapi_infra/swapi/: swapi_client.py
infrastructure/src/hexa_swapi_infra/swapi/models/: swapi_response.py  swapi_starship.py
infrastructure/src/hexa_swapi_infra/test_utils/: is_test_context.py
src/hexa_swapi_python/: main.py
tests/: conftest.py  test_rescue_fleet_controller.py
