[project]
name = "hexa-swapi-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "domain",
    "fastapi>=0.115.6",
    "fastapi-injector>=0.6.2",
    "httpx>=0.28.1",
    "infrastructure",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["domain", "infrastructure"]

[tool.uv.sources]
domain = { workspace = true }
infrastructure = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexa_swapi_python"]

[project.scripts]
main = "hexa_swapi_python.main:main"
